--- a/less/tabs.less
+++ b/less/tabs.less
@@ -162,3 +162,17 @@
 [role="tab"] {
     appearance: none;
 }
+
+@media (prefers-color-scheme: dark) {
+    [role="tabpanel"] {
+        h2 {
+            color: #333;
+        }
+        p {
+            color: #333;
+        }
+        a {
+            color: #075ac4
+        }
+    }
+}
